fix icon size at collapse

--- a/app/frontend/stylesheets/local/scihist_masthead.scss
+++ b/app/frontend/stylesheets/local/scihist_masthead.scss
@@ -406,6 +406,10 @@
             min-height: auto
         }
 
+        .header:not(.header_mobile) .header__logo {
+            width: 15.5625em
+        }
+
         .header:not(.header_mobile) .header__nav {
             display: none;
             opacity: 0;
